# xray-16

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: utils.cmake
src/Layers/xrRenderPC_GL/: CMakeLists.txt
src/utils/xrLCUtil/: CMakeLists.txt
src/utils/xrMiscMath/: CMakeLists.txt
src/xrAICore/: CMakeLists.txt
src/xrAICore/Components/: problem_solver.h
src/xrAICore/Navigation/PathManagers/: path_manager_solver.h
src/xrCDB/: CMakeLists.txt
src/xrCore/: CMakeLists.txt
src/xrEngine/: CMakeLists.txt
src/xrGame/: CMakeLists.txt
src/xrGameSpy/: CMakeLists.txt
src/xrNetServer/: CMakeLists.txt
src/xrNetServer/empty/: NET_Client.cpp  NET_Server.cpp
src/xrParticles/: CMakeLists.txt
src/xrPhysics/: CMakeLists.txt
src/xrScriptEngine/: CMakeLists.txt
src/xrSound/: CMakeLists.txt
src/xrUICore/: CMakeLists.txt
